--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # This is the name of the workflow, visible on GitHub UI.
-name: test
+name: compilation check
  
 # Here we tell GitHub to run the workflow when a commit
 # is pushed or a Pull Request is opened.
@@ -20,7 +20,7 @@ jobs:
         # The matrix will produce one job for each configuration
         # parameter of type arduino-platform, in this case a
         # total of 2.
-        arduino-platform: ["arduino:samd", "arduino:avr"]
+        arduino-platform: ["arduino:avr"]
         # This is usually optional but we need to statically define the
         # FQBN of the boards we want to test for each platform. In the
         # future the CLI might automatically detect and download the core
