--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,4 @@ jobs:
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
         board: "arduino:avr:leonardo"
+        sketch: ./preybot
