--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: check compiling sketch
+        - arduino --install-library "FastLED"
       uses: Legion2/arduino-builder-action@v2.0.0
       with:
         board: "arduino:avr:uno"
